--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,43 +18,60 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:screenOrientation="sensorPortrait" />
         <activity
-            android:name=".MyListOfPetsActivity"
+            android:name=".MyPetsActivity"
             android:label="My Pets"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".PetProfileActivity"
             android:label="My Pet"
-            android:parentActivityName=".MyListOfPetsActivity"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".MyPetsActivity"
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".PetPlacesActivity"
-            android:label="Pets Places"
+            android:label="Pet Places"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".PetShopActivity"
             android:label="Pet Shop"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <activity
-            android:name=".VetsActivity"
-            android:label="Veterinarians"
+            android:name=".PetCareServiceActivity"
+            android:label="Pet Care Services"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".AdvertActivity"
             android:label="Advert"
             android:parentActivityName=".PetShopActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="Login"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:label="Forgot your password"
+            android:parentActivityName=".LoginActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".PetCareProviderRegisterationActivity"
+            android:label="Tell us about yourself"
+            android:parentActivityName=".RegistrationActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
