--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ahmedbass.mypetfriend">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -29,7 +31,7 @@
             android:theme="@style/AppTheme.SlideEnd"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".PetCareProviderRegisterationActivity"
+            android:name=".PetCareProviderRegistrationActivity"
             android:label="Tell Us About Yourself"
             android:launchMode="singleTop"
             android:parentActivityName=".RegistrationActivity"
@@ -65,15 +67,17 @@
             android:parentActivityName=".MyPetsActivity"
             android:theme="@style/AppTheme.NoActionbar_SlideBottom" />
         <activity
-            android:name=".PetPlacesActivity"
+            android:name=".PetPlacesMapActivity"
             android:label="Pet Places"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PetCareServiceActivity"
             android:label="Pet Care Services"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PetCareProviderProfileActivity"
             android:label="Pet Care Provider"
@@ -83,7 +87,8 @@
             android:name=".PetMarketActivity"
             android:label="Pet Market"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AdvertActivity"
             android:label="Advert"
@@ -97,17 +102,35 @@
             android:theme="@style/AppTheme.SlideTop"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".SettingsActivity"
-            android:label="Settings"
+            android:name=".MyAccountActivity"
+            android:label="My Account"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".EditUserProfileActivity"
             android:label="My Profile"
-            android:parentActivityName=".SettingsActivity"
+            android:parentActivityName=".MyAccountActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.SlideEnd"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".AddEditAdvertActivity"></activity>
+        <activity
+            android:name=".MyAdvertsActivity"
+            android:label="My Adverts"
+            android:parentActivityName=".MyAccountActivity"
+            android:theme="@style/AppTheme.SlideEnd" />
+        <activity
+            android:name=".AddEditAdvertActivity"
+            android:label="Create New Advert"
+            android:parentActivityName=".MyAdvertsActivity"
+            android:theme="@style/AppTheme.SlideTop"
+            android:windowSoftInputMode="stateHidden" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
     </application>
 
 </manifest>
